# EDT-Lunabotics-2026

./: .gitignore  README.md  frames_2026-02-11_20.30.06.gv  frames_2026-02-16_16.21.13.gv  frames_2026-02-17_19.01.56.gv  frames_2026-03-11_20.06.46.gv  frames_2026-03-13_16.31.32.gv  install.sh  test.py
.vision_pkg.backup/: package.xml
.vision_pkg.backup/vision_pkg/: rs_camera.py
interfaces_pkg/: NavigationClient.cpp
lunabot_teleop/: controller_node.cpp
src/aegis_bringup/: CMakeLists.txt  package.xml
src/aegis_bringup/launch/: aegis.launch.py
src/config_pkg/: CMakeLists.txt  package.xml
src/config_pkg/params/apriltag/: tag_params.yaml
src/config_pkg/params/gazebo/: gazebo_uic_bot_params.yaml
src/config_pkg/params/nav2/: nav2_uic_bot_params.yaml  nav2_uic_bot_params_backup.yaml
src/config_pkg/params/robot_localization/: ukf_params.yaml  ukf_sim_params.yaml
src/config_pkg/params/rtabmap/: rtabmap_params.yaml
src/controller_pkg/: CMakeLists.txt  package.xml
src/controller_pkg/src/: KSC-odometry_node.cpp  UCF-odometry_node.cpp  controller_node.cpp  controller_node_old.cpp  controller_node_test.cpp  depositing_node.cpp  excavation_node.cpp  excavation_nodetest.cpp  health_node.cpp  health_node_test.cpp  odometry_node.cpp  old_controller_node.cpp  old_test_controller_node.cpp  readme.md  sandpit_excavation.cpp  serial_reader_node.cpp
src/description_pkg/: CMakeLists.txt  package.xml
src/description_pkg/urdf/: uic_bot.xacro
src/interfaces_pkg/: .CMakeLists.txt.swo  CMakeLists.txt  package.xml
src/interfaces_pkg/action/: Depositing.action  Excavation.action  Navigation.action
src/interfaces_pkg/msg/: MotorHealth.msg
src/interfaces_pkg/srv/: DepositingRequest.srv  ExcavationRequest.srv  NavigationRequest.srv
src/localization_pkg/: CMakeLists.txt  package.xml
src/localization_pkg/params/: ekf.yaml
src/localization_pkg/src/: localization_node.cpp
src/logger_pkg/: package.xml  setup.py
src/logger_pkg/logger_pkg/: loggerNode.py
src/msg_pkg/: CMakeLists.txt  README.md  package.xml
src/msg_pkg/action/: Excavation.action  Localization.action
src/navagation_pkg/src/: autonomous_navagation_node.cpp
src/navigation_pkg/: CMakeLists.txt  README.md  package.xml  straight_line_planner.xml
src/navigation_pkg/scripts/: send_waypoints.py
src/navigation_pkg/src/: excavation_server.cpp  localization_server.cpp  localization_server_backup.cpp  navigation-old_node.cpp  navigation_client.cpp  navigation_node.cpp  straight_line_planner.cpp
src/neptune_bringup/: CMakeLists.txt  package.xml
src/neptune_bringup/launch/: neptune.launch.py  neptunesim.launch.py  test.launch.py  viz.launch.py
src/neptune_bringup/params/: nav2_params.yaml
src/scripts/: README.md  coordinategrabber.py  frames_2026-02-06_16.12.56.gv  install_dependencies.sh
src/sim_pkg/: CMakeLists.txt  package.xml
src/teleop_pkg/: CMakeLists.txt  README.md  package.xml  setup.py
src/teleop_pkg/src/: controller_teleop.cpp  keyboard_teleop.py
src/util_pkg/: CMakeLists.txt  package.xml
src/util_pkg/src/: actuator_position.cpp  arduino_serial_node.cpp  blade_joint_controller.cpp  hardware_monitor.cpp  imu_rotator.cpp  topic_remapper.cpp
src/vision_pkg/: CMakeLists.txt  package.xml  setup.py
src/vision_pkg/include/vision_pkg/: CameraRS.h.backup
src/vision_pkg/src/: CameraRS-alternate.cpp  CameraRS.cpp  CameraRS.cpp.backup  main.cpp  rs_camera.alt.cpp  rs_camera_backup_5_15_25.cpp  rs_camera_node.cpp  rs_camera_node_backup.cpp  rs_camera_node_old.cpp  rs_depth_test.cpp
src/vision_pkg/vision_pkg/: rs_camera.py
src/webgui_pkg/: package.xml  setup.cfg  setup.py
src/webgui_pkg/webgui_pkg/: app.py
src/webgui_pkg/webgui_pkg/static/css/: index.css  internal_systems.css  networking.css  pilot.css  pilot_old.css
src/webgui_pkg/webgui_pkg/static/js/: gamepad_setup.js  internal_systems.js  pilot.js  pilot_old.js  ros_setup.js
src/webgui_pkg/webgui_pkg/static/js/animation/: digital_twin.js  quest_arrow.js
src/webgui_pkg/webgui_pkg/static/objects/: pointer_arrow.glb
src/webgui_pkg/webgui_pkg/templates/: \  index.html  internal_systems.html  networking.html  pilot.html  pilot_backup.html  pilot_old.html
