<?xml version="1.0"?>
<package format="3">
  <name>config_pkg</name>
  <version>1.0.0</version>
  <description>configs and parameters for gazebo, rviz, rtabmap, and apriltags</description>
  <maintainer email="abaja5@uic.edu">Aakash Bajaj</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>