<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_pkg</name>
  <version>0.0.1</version>
  <description>Nav2 interface for autonomous robot with SparkMax motor controllers</description>
  <maintainer email="cdiede2@uic.edu">edt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Your SparkMax hardware interface library -->
  <depend>sparkcan</depend>

  <!-- Nav2-specific interfaces -->
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

